[gd_scene load_steps=8 format=3 uid="uid://cbcey6bevtj4n"]

[ext_resource type="Texture2D" uid="uid://be6jherxgqfyu" path="res://resources/assets/enemy/bush_spider/test01.png" id="1_blony"]
[ext_resource type="Script" path="res://scripts/_enemy_1.gd" id="1_fx2uq"]
[ext_resource type="Shader" path="res://resources/shaders/blink.gdshader" id="2_xd0ov"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dji2i"]
shader = ExtResource("2_xd0ov")
shader_parameter/blink_color = Color(0, 0.243137, 0.180392, 1)
shader_parameter/blink_intensity = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_d20b1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_blony")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"inactive",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hj6mb"]
radius = 30.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cllh1"]
radius = 40.0
height = 154.003

[node name="Enemy1" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_fx2uq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_dji2i")
position = Vector2(7.62939e-06, 0)
scale = Vector2(0.0601436, 0.0601436)
sprite_frames = SubResource("SpriteFrames_d20b1")
animation = &"active"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hj6mb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -10)
rotation = -1.57144
shape = SubResource("CapsuleShape2D_cllh1")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="RightRayCast" type="RayCast2D" parent="."]
target_position = Vector2(55, 0)
collision_mask = 3

[node name="LeftRayCast" type="RayCast2D" parent="."]
target_position = Vector2(-55, 0)
collision_mask = 3

[connection signal="heal" from="." to="." method="_on_heal"]
[connection signal="hit" from="." to="." method="_on_hit"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
